new brach Samuel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <header>
     <h1>Site Responsivo</h1>
+    <p>Criada a branch Samuel</p>
     <nav>
+      <p>This is a test for test</p>
       <ul>
         <li><a href="#">Início</a></li>
         <li><a href="#">Sobre</a></li>
