--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Site Responsivo</h1>
-    <p>Criada a branch Samuel</p>
+    <p>Esta é a branch develop</p>
     <nav>
       <p>This is a test for test</p>
       <ul>
